sdk/go/auto/test/errors/conflict_error/go.mod
module github.com/pulumi/pulumi/sdk/v3/go/auto/test/errors/conflict_error

go 1.16

require github.com/pulumi/pulumi/sdk/v3 v3.0.0-20210322210933-10a6a2caf014
